<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="413dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/background_light"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                tools:text="Home" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                tools:text="Home" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                tools:text="Home" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>


        <Button
            android:id="@+id/Registrar"
            android:layout_width="99dp"
            android:layout_height="44dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="330dp"
            android:text="registrar"
            app:layout_constraintBottom_toTopOf="@+id/editTextN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_marginRight="8dp"
            tools:ignore="UnknownId" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="429dp"
            android:layout_height="275dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="left|right"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                app:srcCompat="@drawable/cristianismo"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/sede"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"></LinearLayout>

        <LinearLayout
            android:layout_width="414dp"
            android:layout_height="132dp"
            android:layout_marginTop="8dp"
            android:background="?attr/colorButtonNormal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="446dp"
                android:layout_height="134dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/maxresdefault"


                />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="126dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="8sp"
                android:text="@string/estudo"
                android:textAlignment="viewStart"
                android:textColor="?android:attr/colorForeground"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="start" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="414dp"
            android:layout_height="132dp"
            android:layout_marginTop="150dp"
            android:background="?attr/colorButtonNormal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <ImageView
                android:id="@+id/mulher"
                android:layout_width="446dp"
                android:layout_height="145dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/mulher"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="126dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="8sp"
                android:text="@string/estudo"
                android:textAlignment="viewStart"
                android:textColor="?android:attr/colorForeground"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="414dp"
            android:layout_height="132dp"
            android:layout_marginTop="300dp"
            android:background="?attr/colorButtonNormal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <ImageView
                android:id="@+id/fe"
                android:layout_width="446dp"
                android:layout_height="135dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/fe"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="126dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="8sp"
                android:text="@string/estudo"
                android:textAlignment="viewStart"
                android:textColor="?android:attr/colorForeground"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="start" />
        </LinearLayout>


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginEnd="236dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/atividade"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            android:layout_marginRight="236dp"
            android:layout_marginLeft="8dp" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="395dp"
            android:layout_height="178dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Registrar">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estudo2"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

</ScrollView>